K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservice
  template:
    metadata:
      labels:
        app: commandsservice
    spec:
      containers:
      - name: commandsservice
        image: dmishne/commandsservice:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
  - name: commandsservice
    protocol: TCP
    port: 80
    targetPort: 80
